2009-03-24  Bastien Nocera  <hadess@hadess.net>

	* src/plugins/screenshot/totem-screenshot-plugin.c (impl_activate):
	Use Ctrl+S not Shift+S to capture a screenshot (Closes: #576610)

2009-03-20  Philip Withnall  <philip@tecnocode.co.uk>

	* src/totem-video-thumbnailer.c: Fix Cairo #include, spotted by Chris
	Vine <chris@cvine.freeserve.co.uk>. (Closes: #576067)

2009-03-18  Philip Withnall  <philip@tecnocode.co.uk>

	* src/plugins/opensubtitles/opensubtitles.py: Brown paper bag revert
	of part of the last commit to fix the OpenSubtitles plugin.
	(Closes: #575771)

============ Version 2.26.0

2009-03-16  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd
	* configure.in: 2.26.0

2009-03-11  Philip Withnall  <philip@tecnocode.co.uk>

	* src/plugins/totem/__init__.py: Import gettext and set the
	translation domain when importing the module

	* src/plugins/coherence_upnp/coherence_upnp.py:
	* src/plugins/jamendo/jamendo.py:
	* src/plugins/opensubtitles/opensubtitles.py:
	* src/plugins/youtube/youtube.py: Use the gettext set in the
	totem Python module

	Spotted by Gabor Kelemen <kelemeng@gnome.hu> (Closes: #574700)

2009-03-05  Philip Withnall  <philip@tecnocode.co.uk>

	* src/plugins/opensubtitles/opensubtitles.py: Patch from Ignacio Casal
	Quinteiro <nacho.resa@gmail.com> to fix language selection in the
	OpenSubtitles plugin. (Closes: #572733)

2009-03-03  Philip Withnall  <philip@tecnocode.co.uk>

	* src/plugins/coherence_upnp/coherence_upnp.py: Mark some strings
	as translatable and ensure gettext is imported to the Coherence
	plugin.

============ Version 2.25.92

2009-03-03  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd
	* configure.in: 2.25.92
	* Makefile.am: Some distcheck fixes

2009-03-03  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totem-plugin-viewer.c (totem_embedded_open_uri):
	Fix repeat not working when we open a single file ourselves,
	patch from Kazuhiro Yamato <kyamato@miraclelinux.com>
	(Closes: #572942)
