@@ -27,6 +27,7 @@
 
 G_BEGIN_DECLS
 
+void totem_session_add_options (GOptionContext *context);
 void totem_session_setup (Totem *totem, char **argv);
 void totem_session_restore (Totem *totem, char **filenames);
 
