@@ -1,3 +1,10 @@
+2009-03-24  Christian Persch  <chpe@gnome.org>
+
+	* src/totem-session.c: (totem_session_restore):
+	* src/totem-session.h:
+	* src/totem.c: (main): Add smclient options when parsing totem's
+	command line. Bug #576620.
+
 2009-03-24  Bastien Nocera  <hadess@hadess.net>
 
 	* src/plugins/screenshot/totem-screenshot-plugin.c (impl_activate):
